Add classes, id and font link

--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Fascinate+Inline&display=swap" rel="stylesheet"> 
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
-        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia1.tenor.com%2Fimages%2F2b2ac0310e1144bd05cf6d07f67ce860%2Ftenor.gif%3Fitemid%3D9646992&f=1&nofb=1" alt="Kirby eating as much food as he can">
-        <p>Welcome to recipe project website.</p>
-        <p>Below you can find three recipes of my favourites foods</p>
-        <ul>
-            <li><a href="./recipes/lasagna.html">Homemade Lasagne</a></li>
-            <li><a href="./recipes/spaghetti.html">Classic Spaghetti</a></li>
-            <li><a href="./recipes/chicken-fried.html">Fried Chicken</a></li>
-        </ul>
-
+        <img class="border" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia1.tenor.com%2Fimages%2F2b2ac0310e1144bd05cf6d07f67ce860%2Ftenor.gif%3Fitemid%3D9646992&f=1&nofb=1" alt="Kirby eating as much food as he can">
+        <div id = "contents" class="border">
+            <p>Welcome to recipe project website.</p>
+            <p>Below you can find three recipes of my favourites foods</p>
+            <ul>
+                <li class="test"><a href="./recipes/lasagna.html">Homemade Lasagne</a></li>
+                <li><a href="./recipes/spaghetti.html">Classic Spaghetti</a></li>
+                <li><a href="./recipes/chicken-fried.html">Fried Chicken</a></li>
+            </ul>
+        </div>
         <h6><em><a href="https://www.jamieoliver.com/">Reference</a></em></h6>
     </body>
 </html>
