Add new links to reference

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
                 <li><a href="./recipes/chicken-fried.html">Fried Chicken</a></li>
             </ul>
         </div>
-        <h6><em><a href="https://www.jamieoliver.com/">Reference</a></em></h6>
+        <h6><em>References</em>
+            <ul>
+                <li><a href="https://www.jamieoliver.com/">Jamie Oliver</a></li>
+                <li><a href="https://appletri.github.io/odin-recipes/">Website Design</a></li>
+            </ul>
+        </h6>
     </body>
 </html>
